# actor-searcher

./: .env.example  AGENTS.md  Dockerfile  README.md  STARTUP.md  actor_profile.yaml  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_actor_profile_tables.py
app/: main.py
app/admin/: auth.py  routes.py
app/admin/templates/: base.html  profile.html  stats.html  (+1 more)
app/agents/: deadline_extractor_agent.py  dedup_agent.py  notification_agent.py  profile_matching_agent.py  query_generator_agent.py  ranking_agent.py  search_agent.py  summarizer_agent.py
app/api/: deps.py  routes.py
app/config/: settings.py
app/core/: exceptions.py  logging.py
app/feedback/: learner.py
app/models/: db.py  schemas.py
app/notifications/: base.py  discord.py  telegram.py  telegram_bot.py  telegram_handler.py
app/profile/: loader.py  models.py
app/providers/: backstage.py  base.py  brave.py  gmail_imap.py  multi.py  tavily.py
app/repositories/: feedback_repository.py  run_repository.py  search_repository.py
app/scheduler/: scheduler_service.py
app/services/: llm_service.py  orchestrator.py
app/storage/: database.py
docs/: business-plan-cost-analysis.md  guida_utilizzo.md
tests/: test_backstage_provider.py  test_deadline_extractor_agent.py  test_dedup_agent.py  test_feedback_repository.py  test_gmail_provider.py  test_preference_learner.py  test_profile_loader.py  test_profile_matching_agent.py  test_provider_tavily.py  test_query_generator_agent.py  test_scheduler.py  test_telegram_bot_notifier.py
(+4 files in other folders)
